--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Unit 2 -Building app UI/.DS_Store
 Unit 2 -Building app UI/DiceRoller/.idea/gradle.xml
 Unit 2 -Building app UI/.DS_Store
 Unit 2 -Building app UI/DiceRoller/.idea/gradle.xml
+CodeExamples/
